--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "eslint-plugin-jsx-a11y": "^6.9.0",
+    "http-proxy-middleware": "^3.0.0",
     "pretendard": "^1.3.9",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
